2007-07-31  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* VirtualPathUtility.cs: refactored GetDirectory, ToAbsolute, added
	internal api to skip path normalizing

2007-07-30  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpResponseStream.jvm.cs: optimized CharBucket

2007-07-22  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpServerUtility.cs: fixed Execute, SetCurrentExePath should be 
	called after ApplicationInstance.GetHandler call in case of GetHandler
	fails for some reason

2007-07-21  Marek Habersack  <mhabersack@novell.com>

	* HttpRuntime.cs: clean up the dynamic base directory on domain
	shutdown.

2007-07-10  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpUtility.cs: optimized HtmlEncode and HtmlAttributeEncode methods

2007-07-05  Miguel de Icaza  <miguel@novell.com>

	* HttpApplication.cs (AsyncRequestState.Complete): Add the
	try/catch for the callback here to ensure that we only call
	complete_event.Set once. 

	(PipelineDone): This is where the core of the bug fix is: do not
	call Complete() or call done.Set() (depending on the invocation
	case) until we are actually done cleaning up the request.

	The problem was that we signaled that we were done, but we had not
	completed the shut down, so another thread could have been
	scheduled on the same HttpApplication and had its variables be
	modified as we completed the shutdown on the first thread. 

	This fixes #81400 which was a very long standing bug.  

	(Tick): Remove the pipeline check against null, this is not
	necessary and it will help us find problems like this one in the
	future.

	Reverts patch r66072 which was a described as:

		band-aid patch to help debugging hang running 2.0
		tests.

2007-07-02  Marek Habersack  <mhabersack@novell.com>

	* CapabilitiesLoader.cs: provide default capability values for all
	the 2.0+ capabilities which are not defined in our
	browscap.ini. The default values have been assigned as per
	MSDN. Fixes bug #81927
